// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reporting APIs CSV Generation from Saved Search ID export from non-timebased data view query stored in the saved search csv file matches 1`] = `
"_id,_index,_score,eon,epoch,era,period
tvJJX4UBvD7uFsw9L2x4,timeless-test,1,Phanerozoic, Pliocene,Cenozoic,Neogene
t_JJX4UBvD7uFsw9L2x4,timeless-test,1,Phanerozoic, Holocene,Cenozoic,Quaternary
uPJJX4UBvD7uFsw9L2x4,timeless-test,1,Phanerozoic,-,Mesozoic,Cretaceous
ufJJX4UBvD7uFsw9L2x4,timeless-test,1,Phanerozoic,-,Mesozoic,Jurassic
uvJJX4UBvD7uFsw9L2x4,timeless-test,1,Phanerozoic,-,Paleozoic,Cambrian
u_JJX4UBvD7uFsw9L2x4,timeless-test,1,Proterozoic,-,Paleozoic,Permian
"
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from non-timebased data view query stored in the saved search job response data is correct 1`] = `
Object {
  "contentDisposition": "attachment; filename=*zoic.csv",
  "contentType": "text/csv; charset=utf-8",
  "title": "*zoic",
}
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from timebased data view timezone formatting export with custom timezone and timeRange from locator params csv file matches 1`] = `
"order_date,category,currency,customer_id,order_id,day_of_week_i,products.created_on,sku
2019-07-11 16:00:00.000,Men's Shoes, Men's Clothing, Women's Accessories, Men's Accessories,EUR,19,716724,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0687606876, ZO0290502905, ZO0126701267, ZO0308503085
2019-07-11 16:00:00.000,Women's Shoes, Women's Clothing,EUR,45,591503,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0006400064, ZO0150601506
2019-07-11 16:00:00.000,Men's Shoes, Men's Clothing,EUR,41,591636,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0385003850, ZO0408604086
2019-07-11 16:00:00.000,Men's Shoes,EUR,30,591539,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0505605056, ZO0513605136
2019-07-11 16:00:00.000,Men's Clothing,EUR,41,591598,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0276702767, ZO0291702917
2019-07-11 16:00:00.000,Women's Clothing,EUR,44,590927,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0046600466, ZO0050800508
2019-07-11 16:00:00.000,Men's Clothing, Men's Shoes,EUR,48,590970,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0455604556, ZO0680806808
2019-07-11 16:00:00.000,Women's Clothing, Women's Shoes,EUR,46,591299,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0229002290, ZO0674406744
2019-07-11 16:00:00.000,Men's Clothing,EUR,36,591133,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0529905299, ZO0617006170
2019-07-11 16:00:00.000,Men's Clothing,EUR,13,591175,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0299402994, ZO0433504335
2019-07-11 16:00:00.000,Men's Shoes, Men's Clothing,EUR,21,591297,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0257502575, ZO0451704517
2019-07-11 16:00:00.000,Men's Clothing,EUR,14,591149,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0584905849, ZO0578405784
2019-07-11 16:00:00.000,Women's Clothing, Women's Shoes,EUR,27,591754,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0335803358, ZO0325903259
2019-07-11 16:00:00.000,Women's Clothing, Women's Shoes,EUR,42,591803,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0645906459, ZO0324303243
2019-07-11 16:00:00.000,Women's Clothing,EUR,46,592082,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0034400344, ZO0492904929
2019-07-11 16:00:00.000,Women's Shoes, Women's Accessories,EUR,27,591283,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0239302393, ZO0198501985
2019-07-11 16:00:00.000,Men's Clothing, Men's Shoes,EUR,4,591148,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0290302903, ZO0513705137
2019-07-11 16:00:00.000,Men's Accessories, Men's Clothing,EUR,51,591417,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0464504645, ZO0621006210
2019-07-11 16:00:00.000,Men's Clothing, Men's Shoes,EUR,14,591562,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0544305443, ZO0108001080
2019-07-11 16:00:00.000,Women's Clothing, Women's Accessories,EUR,5,590996,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0638106381, ZO0096900969
2019-07-11 16:00:00.000,Women's Shoes,EUR,27,591317,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0366203662, ZO0139501395
2019-07-11 16:00:00.000,Men's Clothing,EUR,38,591362,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0541805418, ZO0594105941
2019-07-11 16:00:00.000,Men's Shoes, Men's Clothing,EUR,30,591411,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0693506935, ZO0532405324
2019-07-11 16:00:00.000,Women's Clothing,EUR,12,591709,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0638206382, ZO0038800388
2019-07-11 16:00:00.000,Men's Clothing,EUR,52,590937,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0297602976, ZO0565605656
2019-07-11 16:00:00.000,Men's Clothing,EUR,29,590976,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0561405614, ZO0281602816
2019-07-11 16:00:00.000,Women's Shoes,EUR,27,591498,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0138901389, ZO0363503635
2019-07-11 16:00:00.000,Women's Accessories, Women's Shoes,EUR,44,591671,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0301903019, ZO0020200202
2019-07-11 16:00:00.000,Men's Shoes, Men's Accessories,EUR,34,591451,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0398103981, ZO0311703117
2019-07-11 16:00:00.000,Women's Clothing, Women's Shoes,EUR,5,590907,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0331003310, ZO0326303263
2019-07-11 16:00:00.000,Men's Clothing,EUR,29,591933,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0113001130, ZO0553705537
2019-07-11 16:00:00.000,Men's Clothing, Men's Shoes,EUR,39,591962,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0554305543, ZO0391403914
2019-07-11 16:00:00.000,Women's Accessories, Women's Shoes, Women's Clothing,EUR,17,726066,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0077700777, ZO0249302493, ZO0213902139, ZO0004200042
2019-07-11 16:00:00.000,Men's Accessories, Men's Clothing,EUR,15,590953,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0127301273, ZO0120901209
2019-07-11 16:00:00.000,Women's Clothing,EUR,26,591651,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0489204892, ZO0169501695
2019-07-11 16:00:00.000,Men's Clothing,EUR,49,591263,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0413704137, ZO0448904489
2019-07-11 16:00:00.000,Women's Shoes, Women's Clothing,EUR,26,591300,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0130901309, ZO0711707117
2019-07-11 16:00:00.000,Men's Clothing, Men's Shoes,EUR,48,591010,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0458804588, ZO0403504035
2019-07-11 16:00:00.000,Men's Shoes, Men's Clothing,EUR,19,591919,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0511805118, ZO0546605466
2019-07-11 16:00:00.000,Women's Accessories, Women's Clothing,EUR,44,591964,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0190101901, ZO0493704937
"
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from timebased data view timezone formatting export with custom timezone and timeRange from locator params job response data is correct 1`] = `
Object {
  "contentDisposition": "attachment; filename=Ecommerce%20Data.csv",
  "contentType": "text/csv; charset=utf-8",
  "title": "Ecommerce Data",
}
`;
